kubeconf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress
spec:
    rules:
    - host: doit.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
                name: client-service
                port:
                    number: 8080
        - path: /api
          pathType: Prefix
          backend:
            service:
                name: server-service
                port:
                    number: 8000
